# regex-specificity

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: counterintuitive.rs  sort.rs
src/: ffi.rs  lib.rs
